<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_entrar"
            android:layout_margin="18dp"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            app:fontFamily="@font/helvetica_neue_bold"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_conta"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="25dp"
            android:textSize="22sp"
            android:textColor="#5e5e5e"
            app:fontFamily="@font/helvetica_neue_light"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/hint_e_mail"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="18dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            app:fontFamily="@font/helvetica_neue_light"
            android:background="@drawable/custom_edit_text"
            android:inputType="textEmailAddress"
            android:drawableRight="@drawable/ic_mail"
            android:drawableEnd="@drawable/ic_mail"
            />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:hint="@string/hint_senha"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            app:fontFamily="@font/helvetica_neue_light"
            android:background="@drawable/custom_edit_text"
            android:inputType="textPassword"
            android:maxLength="8"
            android:drawableRight="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_lock" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:text="@string/btnEntrar"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:textColor="#fff"
            app:fontFamily="@font/helvetica_neue_bold"
            android:shadowColor="@android:color/transparent"
            android:background="@drawable/custom_button"
            android:onClick="abrirActivityInicio"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnEsqueciSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            app:fontFamily="@font/helvetica_neue_light"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/transparent"
            android:shadowColor="@android:color/transparent"
            android:text="@string/hint_esqueci_minha_senha"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_agora_mesmo"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:textSize="22sp"
            android:textColor="#5e5e5e"
            app:fontFamily="@font/helvetica_neue_light"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnCadastro"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="18dp"
            android:text="@string/btnCadastrar"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            app:fontFamily="@font/helvetica_neue_bold"
            android:shadowColor="@android:color/transparent"
            android:background="@drawable/custom_button_stroke"
            android:onClick="abrirActivityCadastro"/>

    </LinearLayout>

</ScrollView>