<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:gravity="bottom"
    android:background="@color/colorPrimaryDark"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="108dp"
            android:layout_height="108dp"
            android:src="@android:color/white" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fotoPerfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:src="@drawable/perfil_example" />

    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvNomeCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_lucas_bueno"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/helvetica_neue_bold"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        tools:targetApi="jelly_bean" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_email"
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/helvetica_neue_light"
        tools:targetApi="jelly_bean" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tvFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_facebook"
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="@font/helvetica_neue_light"
        tools:targetApi="jelly_bean"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/ic_link"
        android:drawableStart="@drawable/ic_link"
        />


</RelativeLayout>